# PDF_Overview_Gemini

./: .gitignore  README.md  hello.py  pyproject.toml
db/: summaries.db
docling_core/types/doc/: document.py
src/: classes.py  db.py  docling_loader.py  genai_handles.toml  log.txt  main.py  meta_prompt.py  pdf_view.py  prompts.toml  section_summaries.md  summaries.db  temp.ipynb  ui_main.py
