[project]
name = "pdf-overview-gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.6.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyterlab-widgets>=3.0.13",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
    "streamlit>=1.40.1",
    "streamlit-dimensions>=0.0.1",
    "streamlit-file-browser>=3.2.22",
    "streamlit-pdf-viewer>=0.0.19",
    "toml>=0.10.2",
    "watchdog>=6.0.0",
    "docling>=2.7.0",
    "langchain>=0.0.27",
    "langchain-core>=0.3.19",
    "streamlit-extras>=0.5.0",
]
